# my-sudoku

./: pyproject.toml
src/my_sudoku/: __about__.py  __init__.py
src/my_sudoku/sudoku/: square.py
tests/my_sudoku/sudoku/: test_square.py
